--- a/css/style.css
+++ b/css/style.css
@@ -52,7 +52,10 @@ body {
 .user-info::before {
   position: absolute;
   content: "";
-  inset: 0;
+  top: 0;
+  left: 0;
+  bottom: 0;
+  right: 0;
   background: linear-gradient(to right, #035397, #5089c6);
   filter: blur(20px);
   z-index: -1;
@@ -106,24 +109,26 @@ body {
   position: relative;
   transform-style: preserve-3d;
   transform: perspective(1000px);
-  min-width: 300px;
-  max-width: 600px;
+  width: 300px;
   background: #1d1d1d;
   border-radius: 15px;
   box-shadow: 5px 5px 15px rgba(0, 0, 0, 0.8666666667);
   -webkit-user-select: none;
-     -moz-user-select: none;
-      -ms-user-select: none;
-          user-select: none;
+  -moz-user-select: none;
+   -ms-user-select: none;
+       user-select: none;
 }
 .card::before {
   position: absolute;
   content: "";
-  inset: -4px;
+  top: -4px;
+  left: -4px;
+  bottom: -4px;
+  right: -4px;
   background: linear-gradient(45deg, #ff0000 0%, #ff9a00 10%, #d0de21 20%, #4fdc41 30%, #3fdad8 40%, #2fc9e2 50%, #1c7fee 60%, #ba0cf8 80%, #fb07d9 90%, #ff0000 100%) 0 0/300% 100%;
   filter: blur(15px);
   border-radius: 15px;
-  transform: translatez(-1px);
+  transform: translateZ(-1px);
   -webkit-animation: animate-bg 2s linear infinite;
           animation: animate-bg 2s linear infinite;
 }
@@ -230,12 +235,12 @@ body {
 .stats p {
   font-size: 22px;
   font-weight: 500;
-  transform: translatez(20px);
+  transform: translateZ(20px);
 }
 .stats span {
   text-transform: uppercase;
   font-size: 0.6em;
-  transform: translatez(20px);
+  transform: translateZ(20px);
 }
 .stats > * {
   flex-basis: 100%;
@@ -249,4 +254,8 @@ body {
 
 .js-tilt-glare {
   border-radius: 15px;
+}
+
+details {
+  overflow-y: scroll;
 }/*# sourceMappingURL=style.css.map */
