fix: break long words in the card

--- a/css/style.css
+++ b/css/style.css
@@ -117,6 +117,7 @@ body {
   -moz-user-select: none;
    -ms-user-select: none;
        user-select: none;
+  word-wrap: break-word;
 }
 .card::before {
   position: absolute;
