--- a/css/style.scss
+++ b/css/style.scss
@@ -117,6 +117,7 @@ body {
   box-shadow: 5px 5px 15px #000d;
   -webkit-user-select: none;
   user-select: none;
+  word-wrap: break-word;
   &::before {
     position: absolute;
     content: "";
